2009-06-30  Drew Wilson  <atwilson@google.com>

        Reviewed by David Levin.

        <https://bugs.webkit.org/show_bug.cgi?id=25435>

        Added tests for sending MessagePorts to/from workers.

        * fast/workers/resources/worker-cloneport.js: Added.
        (onmessage):
        * fast/workers/resources/worker-messageport.js: Added.
        (onmessage):
        (pingBack):
        * fast/workers/worker-cloneport-expected.txt: Added.
        * fast/workers/worker-cloneport.html-disabled: Added.
        Tests for cloning a port while messages are sent from another thread.
        * fast/workers/worker-messageport-expected.txt: Added.
        * fast/workers/worker-messageport.html-disabled: Added.
        General tests for sending messages to workers via message ports.
        * fast/workers/worker-messageport-gc-expected.txt: Added.
        * fast/workers/worker-messageport-gc.html-disabled: Added.
        Tests to ensure Workers don't shut down when reachable only via MessagePorts.

2009-06-30  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.
        
        <rdar://problem/7019799> Slow loading MediaDocument can fall back to plug-in unnecessarily
        
        Don't test iframe immediately, switch over from <video> to <embed> may not have
        happend when the document 'load' event fires.

        * media/video-document-types.html:

2009-06-30  Xan Lopez  <xlopez@igalia.com>

        Skip new editing tests.

        They are failing because we don't have a dumpEditingCallbacks
        implementation.

        * platform/gtk/Skipped:

2009-06-29  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        <rdar://problem/7016214> JSON.parse fails to parse valid JSON with most Unicode characters
        <https://bugs.webkit.org/show_bug.cgi?id=26802>

        Add test of unicode parsing in JSON.

        * fast/js/JSON-parse-expected.txt:
        * fast/js/resources/JSON-parse.js: