@@ -1,0 +1,15 @@
+<body onload="test()">
+<p>Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=26764">bug 26764</a>:
+Uncaught NOT_FOUND_ERR: DOMException 8 loading empty text file.</p>
+<div id=result></div>
+<iframe src="empty.txt"></iframe>
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+
+function test()
+{
+    document.getElementById("result").innerHTML = frames[0].document.documentElement ? "PASS" : "FAIL";
+}
+</script>
+</body>
