@@ -1,3 +1,15 @@
+2009-06-30  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Dan Bernstein.
+
+        https://bugs.webkit.org/show_bug.cgi?id=26764
+        Uncaught NOT_FOUND_ERR: DOMException 8 loading empty text file
+
+        Test: fast/parser/empty-text-resource.html
+
+        * loader/TextDocument.cpp: (WebCore::TextTokenizer::finish): Create document tree if it
+        hasn't been created yet.
+
 2009-06-30  Brian Weinstein  <bweinstein@apple.com>
 
         Reviewed by Adam Roben.
